Handled opening application and website feature